--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "commander": "^6.2.1"
+    "commander": "^6.2.1",
+    "download-git-repo": "^3.0.2"
   }
 }
